cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-dashboard-service-cluster-ip
spec:
  type: ClusterIP
  selector:
    app: kubernetes-dashboard
  ports:
    - protocol: TCP
      port: 443
      targetPort: 443
