load-balancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-dashboard-service-load-balancer
spec:
  type: LoadBalancer
  selector:
    app: kubernetes-dashboard
  ports:
    - protocol: TCP
      port: 443
      targetPort: 443
