node-port.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-dashboard-service-node-port
spec:
  type: NodePort
  selector:
    app: kubernetes-dashboard
  ports:
    - protocol: TCP
      port: 443
      targetPort: 443
