ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: paw
  name: app-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: test.paw.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: app
              port:
                number: 80
